# gov-school-lms

./: .gitignore  README.md  manage.py  pyproject.toml
domain/base/: apps.py  views.py
domain/subject/: apps.py
domain/users/: admin.py  apps.py  forms.py  urls.py  utils.py
domain/users/migrations/: 0001_initial.py  0002_studentprofile_middle_name.py  0003_studentprofile_gender.py  0004_alter_studentprofile_gender.py  0005_studentprofile_image.py
domain/users/models/: staff.py  students.py
domain/users/views/: student_views.py
gov_lms/: asgi.py  settings.py  urls.py  wsgi.py
static/assets/js/: datatables.js
templates/: base.html  index.html  template.html
templates/domain/users/students/: student_detail.html  student_form.html  student_list.html  test.html
templates/errors/: 400.html  401.html  403.html  404.html  500.html  503.html
templates/partials/: footer.html  header.html  sidebar.html
templates/partials/components/: page-header.html  stat_card.html
templates/students/: student_list.html
