[project]
name = "gov-lms-poetry"
version = "0.1.0"
description = "A Goverment School Based Learning Management System"
authors = [
    {name = "Kasweka1",email = "kaswekamukoko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0,<7.0)"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
